prevent funky overflow

--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,6 @@ body {
   padding: 5px 20px;
   border-radius: 10px;
   background: aliceblue;
-  line-height: 3px;
 }
 
 input {
